--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron-debug": "^3.0.1",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.14.0",
+    "filesize": "^6.1.0",
     "futoin-hkdf": "^1.3.2",
     "moment": "^2.24.0",
     "react": "^16.13.1",
