Add app icon, copy id

--- a/src/main/lib/simple-peer/package.json
+++ b/src/main/lib/simple-peer/package.json
@@ -1,38 +1,38 @@
 {
   "name": "simple-peer",
   "description": "Simple one-to-one WebRTC video/voice and data channels",
-  "version": "9.3.0",
+  "version": "9.7.2",
   "author": {
     "name": "Feross Aboukhadijeh",
     "email": "feross@feross.org",
-    "url": "http://feross.org/"
+    "url": "https://feross.org"
   },
   "bugs": {
     "url": "https://github.com/feross/simple-peer/issues"
   },
   "dependencies": {
-    "debug": "^4.1.1",
-    "get-browser-rtc": "^1.0.2",
-    "inherits": "^2.0.4",
-    "randombytes": "^2.1.0",
-    "readable-stream": "^2.3.6"
+    "debug": "^4.0.1",
+    "get-browser-rtc": "^1.0.0",
+    "queue-microtask": "^1.1.0",
+    "randombytes": "^2.0.3",
+    "readable-stream": "^3.4.0"
   },
   "devDependencies": {
-    "airtap": "1.0.0",
-    "babel-minify": "^0.5.0",
-    "bowser": "^1.9.2",
+    "airtap": "^3.0.0",
+    "babel-minify": "^0.5.1",
+    "bowser": "^2.4.0",
     "browserify": "^16.1.0",
-    "nyc": "^13.1.0",
+    "coveralls": "^3.0.9",
+    "nyc": "^15.0.1",
     "prettier-bytes": "^1.0.3",
     "simple-get": "^3.0.1",
     "speedometer": "^1.0.0",
     "standard": "*",
-    "string-to-stream": "^1.0.0",
-    "tape": "^4.0.0",
-    "through2": "^3.0.0",
+    "string-to-stream": "^3.0.0",
+    "tape": "^5.0.0",
     "thunky": "^1.0.1",
-    "wrtc": "^0.3.6",
-    "ws": "^6.0.0"
+    "wrtc": "^0.4.1",
+    "ws": "^7.0.0"
   },
   "keywords": [
     "data",
@@ -56,12 +56,26 @@
     "url": "git://github.com/feross/simple-peer.git"
   },
   "scripts": {
-    "build": "browserify -s SimplePeer -r ./ | minify > simplepeer.min.js",
+    "build": "browserify -s SimplePeer -r . | minify > simplepeer.min.js",
     "size": "npm run build && cat simplepeer.min.js | gzip | wc -c",
     "test": "standard && npm run test-node && npm run test-browser",
     "test-browser": "airtap --coverage -- test/*.js",
     "test-browser-local": "airtap --coverage --local -- test/*.js",
     "test-node": "WRTC=wrtc tape test/*.js",
-    "test-coverage": "nyc report --reporter=html"
-  }
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/feross"
+    },
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/feross"
+    },
+    {
+      "type": "consulting",
+      "url": "https://feross.org/support"
+    }
+  ]
 }
