--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "brake": "^1.0.1",
     "electron-context-menu": "^0.16.0",
     "electron-debug": "^3.0.1",
+    "electron-store": "^5.2.0",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.14.0",
     "filesize": "^6.1.0",
     "futoin-hkdf": "^1.3.2",
+    "keytar": "^6.0.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
