--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "futoin-hkdf": "^1.3.2",
     "keytar": "^6.0.1",
     "moment": "^2.26.0",
+    "progress-stream": "^2.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
