--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "filesize": "^6.1.0",
     "futoin-hkdf": "^1.3.2",
     "keytar": "^6.0.1",
-    "moment": "^2.27.0",
+    "moment": "^2.29.0",
     "progress-stream": "^2.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -50,28 +50,29 @@
     "ws": "^7.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.11.2",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.1",
-    "electron": "^9.2.0",
-    "electron-builder": "^22.8.0",
-    "electron-rebuild": "^1.11.0",
-    "file-loader": "^6.0.0",
+    "css-loader": "^4.3.0",
+    "electron": "^10.1.2",
+    "electron-builder": "^22.8.1",
+    "electron-rebuild": "^2.0.3",
+    "file-loader": "^6.1.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-watch": "^5.0.1",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "html-loader": "^1.3.1",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
-    "np": "^6.4.0",
+    "np": "^6.5.0",
+    "sass-loader": "^10.0.5",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
