--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "rebuild": "electron-rebuild -f .",
     "test": "npm run lint",
     "start": "{ npm run bundle & gulp; }",
-    "bundler": "BROWSER=none webpack-dev-server --mode development",
+    "bundler": "BROWSER=none webpack serve --mode development --env development",
     "bundle": "webpack --mode production",
     "electron": "electron .",
     "pack": "electron-builder --dir",
@@ -29,51 +29,51 @@
     "release": "np"
   },
   "dependencies": {
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
     "brake": "^1.0.1",
     "electron-context-menu": "^2.3.0",
     "electron-debug": "^3.1.0",
-    "electron-store": "^6.0.0",
+    "electron-store": "^6.0.1",
     "electron-unhandled": "^3.0.2",
     "electron-util": "^0.14.2",
     "filesize": "^6.1.0",
     "futoin-hkdf": "^1.3.2",
-    "keytar": "^6.0.1",
-    "moment": "^2.29.0",
+    "keytar": "^7.0.0",
+    "moment": "^2.29.1",
     "progress-stream": "^2.0.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
     "tweetnacl": "^1.0.3",
-    "update-electron-app": "^1.5.0",
+    "update-electron-app": "^2.0.1",
     "wrtc": "^0.4.6",
-    "ws": "^7.3.1"
+    "ws": "^7.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/runtime": "^7.11.2",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/runtime": "^7.12.5",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
-    "electron": "^10.1.2",
-    "electron-builder": "^22.8.1",
-    "electron-rebuild": "^2.0.3",
-    "file-loader": "^6.1.0",
+    "css-loader": "^5.0.1",
+    "electron": "^10.1.5",
+    "electron-builder": "^22.9.1",
+    "electron-rebuild": "^2.3.2",
+    "file-loader": "^6.2.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-watch": "^5.0.1",
-    "html-loader": "^1.3.1",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^0.11.2",
-    "node-sass": "^4.14.1",
-    "np": "^6.5.0",
+    "mini-css-extract-plugin": "^1.3.0",
+    "node-sass": "^5.0.0",
+    "np": "^7.0.0",
     "sass-loader": "^10.0.5",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "eslintConfig": {
@@ -131,7 +131,7 @@
     ]
   },
   "peerDependencies": {
-    "bootstrap": "^4.5.2",
-    "react-bootstrap": "^1.3.0"
+    "bootstrap": "^4.5.3",
+    "react-bootstrap": "^1.4.0"
   }
 }
